[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "markdown-mcp"
version = "0.1.0"
description = "Minimal MCP server for a fixed Markdown rendering pipeline."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["fastmcp"]

[project.scripts]
markdown-mcp-server = "markdown_mcp.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

